--- a/index.html
+++ b/index.html
@@ -393,41 +393,49 @@
                 <div class="slider-container">
                     <div class="slider">
                             <img
+                                class="unOurCus"
                                 id="diskominfo"
                                 src="./assets/images/diskominfo.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="trisakti"
                                 src="./assets/images/trisakti.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="mensa"
-                                src="./assets/images/mensa.webp"
+                                src="./assets/images/Our Cus Mensa.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="landison"
-                                src="./assets/images/landison.webp"
+                                src="./assets/images/Our Cus Landson.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="otto"
                                 src="./assets/images/otto.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="andini"
                                 src="./assets/images/andini.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="akr"
                                 src="./assets/images/akr.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="indocapital"
                                 src="./assets/images/indocapital.webp"
                                 alt="sponsor"
@@ -438,111 +446,133 @@
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="planetBan"
-                                src="./assets/images/planetBan.webp"
+                                src="./assets/images/Our Cus Planetban.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="smr"
-                                src="./assets/images/mr.webp"
+                                src="./assets/images/Our Cus SMR.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="rukun"
                                 src="./assets/images/rukun.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="gmf"
                                 src="./assets/images/gmf.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="diskominfo"
                                 src="./assets/images/diskominfo.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="trisakti"
                                 src="./assets/images/trisakti.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="mensa"
-                                src="./assets/images/mensa.webp"
+                                src="./assets/images/Our Cus Mensa.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="landison"
-                                src="./assets/images/landison.webp"
+                                src="./assets/images/Our Cus Landson.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="otto"
                                 src="./assets/images/otto.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="andini"
                                 src="./assets/images/andini.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="akr"
                                 src="./assets/images/akr.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="indocapital"
                                 src="./assets/images/indocapital.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="ubm"
                                 src="./assets/images/ubm.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="cas"
-                                src="./assets/images/cas.webp"
+                                src="./assets/images/Our Cus CAS.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="succor"
                                 src="./assets/images/succor.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="planetBan"
-                                src="./assets/images/planetBan.webp"
+                                src="./assets/images/Our Cus Planetban.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="ourCus"
                                 id="smr"
-                                src="./assets/images/mr.webp"
+                                src="./assets/images/Our Cus SMR.png"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="jhl"
                                 src="./assets/images/jhl.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="ubm"
                                 src="./assets/images/ubm.webp"
                                 alt="sponsor"
                             />
                              <img
+                                class="unOurCus"
                                 id="rukun"
                                 src="./assets/images/rukun.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="gmf"
                                 src="./assets/images/gmf.webp"
                                 alt="sponsor"
                             />
                             <img
+                                class="unOurCus"
                                 id="tcl"
                                 src="./assets/images/tcl.webp"
                                 alt="sponsor"
