--- a/detail-product.html
+++ b/detail-product.html
@@ -105,7 +105,7 @@
             <div class="wrapper-detail-product">
                 <div class="child-detail-product">
                     <div class="child-detail-product-left">
-                        <img loading="lazy" src="./assets/images/kamera.jpeg" alt="image-product">
+                        <img loading="lazy" src="./assets/images/example.jpeg" alt="image-product">
                     </div>
                     <div class="child-detail-product-right">
                         <h4>Detail Product</h3>
