--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     >
                         <img
                             loading="lazy"
-                            src="./assets/images/heroes.webp"
+                            src="./assets/images/Banner.webp"
                             class="bgnewhero"
                             alt="https://unsplash.com/s/photos/meet?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
                         />
