change year and revision footer

--- a/category.html
+++ b/category.html
@@ -49,7 +49,11 @@
         />
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-        <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon"> 
+        <link
+            rel="icon"
+            href="./assets/favicon/favicon.ico"
+            type="image/x-icon"
+        />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./assets/styles/navbar.css" />
         <link rel="stylesheet" href="./assets/styles/style.css" />
@@ -119,7 +123,9 @@
                     anywhere in the world securedly.
                 </p>
                 <a href="#categories">
-                    <button class="section4-btn-section4mz4">Exploration</button>
+                    <button class="section4-btn-section4mz4">
+                        Exploration
+                    </button>
                 </a>
             </div>
 
@@ -262,7 +268,7 @@
                 <div class="group-list-hdm">
                     <ul>
                         <h3>PHONE</h3>
-                        <a href="">
+                        <a href="https://wa.me/6285881308687" target="_blank">
                             <li>
                                 <img
                                     loading="lazy"
@@ -277,7 +283,10 @@
                 <div class="group-list-hdm">
                     <ul>
                         <h3>EMAIL</h3>
-                        <a href="">
+                        <a
+                            href="mailto:sales@mandiri-technology-sejahtera.com"
+                            target="__blank"
+                        >
                             <li>
                                 <img
                                     loading="lazy"
@@ -292,7 +301,10 @@
                 <div class="group-list-hdm">
                     <ul>
                         <h3>ADDRESS</h3>
-                        <a href="">
+                        <a
+                            href="https://maps.app.goo.gl/iBKCUC3FyFci5jR17"
+                            target="__blank"
+                        >
                             <li>
                                 <img
                                     loading="lazy"
@@ -308,7 +320,7 @@
             </div>
             <div class="copyright">
                 <small
-                    >© 2021 Mandiri Technology Sejahtera, All Right
+                    >© 2020 Mandiri Technology Sejahtera, All Right
                     Reserved</small
                 >
             </div>
