--- a/detail-product.html
+++ b/detail-product.html
@@ -197,55 +197,34 @@
                     <div class="group-list-hdm">
                         <ul>
                             <h3>PHONE</h3>
-                            <a href="">
-                                <li>
-                                    <img
-                                        loading="lazy"
-                                        src="./assets/icons/phone.svg"
-                                        alt="icon"
-                                    />
-                                    +6285881308687
-                                </li>
+                            <a href="https://wa.me/6285881308687" target="_blank">
+                                <li><img loading="lazy" src="./assets/icons/phone.svg" alt="icon" /> +6285881308687</li>
                             </a>
                         </ul>
                     </div>
                     <div class="group-list-hdm">
                         <ul>
                             <h3>EMAIL</h3>
-                            <a href="">
-                                <li>
-                                    <img
-                                        loading="lazy"
-                                        src="./assets/icons/email.svg"
-                                        alt="icon"
-                                    />
-                                    sales@mandiri-technology-sejahtera.com
-                                </li>
+                            <a href="mailto:sales@mandiri-technology-sejahtera.com" target="__blank">
+                                <li><img loading="lazy" src="./assets/icons/email.svg" alt="icon" /> sales@mandiri-technology-sejahtera.com</li>
                             </a>
                         </ul>
                     </div>
                     <div class="group-list-hdm">
                         <ul>
                             <h3>ADDRESS</h3>
-                            <a href="">
+                            <a href="https://maps.app.goo.gl/iBKCUC3FyFci5jR17" target="__blank">
                                 <li>
-                                    <img
-                                        loading="lazy"
-                                        src="./assets/icons/location.svg"
-                                        alt="icon"
-                                    />
-                                    JL Tanjung Duren Raya No.4 Kav 373 Jakarta –
-                                    Barat 11470
+                                    <img loading="lazy" src="./assets/icons/location.svg" alt="icon" />
+                                    JL Tanjung Duren Raya No.4 Kav 373
+                                    Jakarta – Barat 11470
                                 </li>
                             </a>
                         </ul>
                     </div>
                 </div>
                 <div class="copyright">
-                    <small
-                        >© 2021 Mandiri Technology Sejahtera, All Right
-                        Reserved</small
-                    >
+                    <small>© 2020 Mandiri Technology Sejahtera, All Right Reserved</small>
                 </div>
             </div>
 
