--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p class="parag-testi-mz1">What our customer say</p>
                 <h1 class="title-testi-mz1">ABOUT US</h1>
                 <p class="body-testti-mz1">
-                    A System Integrator company established in September 2021
+                    A System Integrator company established in April 2020
                     specializes in the development of IT network infrastructure
                     and security systems. We have a certified team to provide
                     post-sales services, including implementation, on-site
@@ -628,7 +628,7 @@
                     <div class="group-list-hdm">
                         <ul>
                             <h3>PHONE</h3>
-                            <a href="">
+                            <a href="https://wa.me/6285881308687" target="_blank">
                                 <li><img loading="lazy" src="./assets/icons/phone.svg" alt="icon" /> +6285881308687</li>
                             </a>
                         </ul>
@@ -636,7 +636,7 @@
                     <div class="group-list-hdm">
                         <ul>
                             <h3>EMAIL</h3>
-                            <a href="">
+                            <a href="mailto:sales@mandiri-technology-sejahtera.com" target="__blank">
                                 <li><img loading="lazy" src="./assets/icons/email.svg" alt="icon" /> sales@mandiri-technology-sejahtera.com</li>
                             </a>
                         </ul>
@@ -644,7 +644,7 @@
                     <div class="group-list-hdm">
                         <ul>
                             <h3>ADDRESS</h3>
-                            <a href="">
+                            <a href="https://maps.app.goo.gl/iBKCUC3FyFci5jR17" target="__blank">
                                 <li>
                                     <img loading="lazy" src="./assets/icons/location.svg" alt="icon" />
                                     JL Tanjung Duren Raya No.4 Kav 373
@@ -655,7 +655,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <small>© 2021 Mandiri Technology Sejahtera, All Right Reserved</small>
+                    <small>© 2020 Mandiri Technology Sejahtera, All Right Reserved</small>
                 </div>
             </div>
 
