--- a/brand.html
+++ b/brand.html
@@ -276,7 +276,7 @@
                 <div class="group-list-hdm">
                     <ul>
                         <h3>PHONE</h3>
-                        <a href="">
+                        <a href="https://wa.me/6285881308687" target="_blank">
                             <li>
                                 <img
                                     loading="lazy"
@@ -291,7 +291,10 @@
                 <div class="group-list-hdm">
                     <ul>
                         <h3>EMAIL</h3>
-                        <a href="">
+                        <a
+                            href="mailto:sales@mandiri-technology-sejahtera.com"
+                            target="__blank"
+                        >
                             <li>
                                 <img
                                     loading="lazy"
@@ -306,7 +309,10 @@
                 <div class="group-list-hdm">
                     <ul>
                         <h3>ADDRESS</h3>
-                        <a href="">
+                        <a
+                            href="https://maps.app.goo.gl/iBKCUC3FyFci5jR17"
+                            target="__blank"
+                        >
                             <li>
                                 <img
                                     loading="lazy"
@@ -322,7 +328,7 @@
             </div>
             <div class="copyright">
                 <small
-                    >© 2021 Mandiri Technology Sejahtera, All Right
+                    >© 2020 Mandiri Technology Sejahtera, All Right
                     Reserved</small
                 >
             </div>
