--- a/brand.html
+++ b/brand.html
@@ -86,7 +86,7 @@
                 <div class="logo-navbar5-mz5">
                     <img
                         loading="lazy"
-                        src="./assets/imageslogoMTS.png"
+                        src="./assets/images/logoMTS.png"
                         alt="logo"
                         id="logo"
                     />
